--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
             <video id="pruebaVideo" autoplay loop="true" src="Texturas/moto.mp4"></video>
         </a-assets>
 
-        <!--<a-sky src="#salinas"></a-sky>-->
-        <a-video src="#pruebaVideo" width="16" height="9" position="0 2 -5"></a-video>
+        <a-sky src="#salinas"></a-sky>
+        <!--<a-video src="#pruebaVideo" width="16" height="9" position="0 2 -5"></a-video>-->
 
-
- 
+        <a-entity position="0 1.6 0">
+            <a-camera stereo="eye: left"></a-camera>
+            <a-entity cursor="rayOrigin: mouse"></a-entity>
         </a-entity>
 
         
