--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a-entity cursor="rayOrigin: mouse"></a-entity>
         </a-entity>
 
-        
+        <!--cambioprueba-->
     </a-scene>
    
 </body>
