--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <video id="pruebaVideo" autoplay loop="true" src="Texturas/moto.mp4"></video>
         </a-assets>
 
-        <a-sky src="#salinas"></a-sky>
+        <a-sky src="#sky"></a-sky>
         <!--<a-video src="#pruebaVideo" width="16" height="9" position="0 2 -5"></a-video>-->
 
         <a-entity position="0 1.6 0">
