--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
         <!-- Configuración de la vista estereoscópica -->
         <a-entity camera position="0 1.6 0" look-controls wasd-controls></a-entity>
 
-        <!-- Fondo para la vista estereoscópica -->
-        <a-sky src="#salinas" stereo="true"></a-sky>
+        <!-- Fondo para cada ojo -->
+        <a-sky src="#salinas" stereo="eye:left"></a-sky>
+        <a-sky src="#salinas" stereo="eye:right"></a-sky>
 
         <!-- Opcional: Si deseas mostrar un video -->
         <!--<a-video src="#pruebaVideo" width="16" height="9" position="0 2 -5"></a-video>-->
