--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         </a-entity>
 
         <!-- Fondo para cada ojo -->
-        <a-sky src="#salinas" stereo="eye:left"></a-sky>
-        <a-sky src="#salinas" stereo="eye:right"></a-sky>
+        <!--<a-sky src="#salinas" stereo="eye:left"></a-sky>
+        <a-sky src="#salinas" stereo="eye:right"></a-sky>-->
 
         <!-- Opcional: Si deseas mostrar un video -->
-        <!--<a-video src="#pruebaVideo" width="16" height="9" position="0 2 -5"></a-video>-->
+        <a-video src="#pruebaVideo" width="16" height="9" position="0 2 -5"></a-video>
 
         <!-- Añadir cursor -->
         <a-entity cursor="rayOrigin: mouse"></a-entity>
