--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
 </head>
 <body>
-    <a-scene>
+    <a-scene onclick="playVideo()">
         <!-- Configurar la cámara -->
         <a-entity camera look-controls></a-entity>
 
@@ -36,16 +36,13 @@
                     'controls': 0,
                     'showinfo': 0,
                     'rel': 0
-                },
-                events: {
-                    'onReady': onPlayerReady
                 }
             });
         }
 
-        // Función que se ejecuta cuando el reproductor de YouTube está listo
-        function onPlayerReady(event) {
-            event.target.playVideo();
+        // Función para reproducir el video después de hacer clic en la escena
+        function playVideo() {
+            player.playVideo();
         }
     </script>
 </body>
