--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
 </head>
 <body>
-    <a-scene onclick="playVideo()">
+    <a-scene vr-mode-ui="enabled: true">
         <!-- Configurar la cámara -->
         <a-entity camera look-controls></a-entity>
 
@@ -31,18 +31,13 @@
             player = new YT.Player('youtube-video', {
                 height: '390',
                 width: '640',
-                videoId: 'H9r8CTsSf4U', // Reemplazar con el ID del video de YouTube
+                videoId: 'https://youtu.be/H9r8CTsSf4U?si=u-0CktK6mqMDpDQm', // Reemplazar con el ID del video de YouTube
                 playerVars: {
                     'controls': 0,
                     'showinfo': 0,
                     'rel': 0
                 }
             });
-        }
-
-        // Función para reproducir el video después de hacer clic en la escena
-        function playVideo() {
-            player.playVideo();
         }
     </script>
 </body>
