--- a/index.html
+++ b/index.html
@@ -1,44 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video de VR de YouTube</title>
+    <title>PruebaVR</title>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+    <script src="js/app.js"></script>
 </head>
-<body>
-    <a-scene vr-mode-ui="enabled: true">
-        <!-- Configurar la cámara -->
-        <a-entity camera look-controls></a-entity>
 
-        <!-- Añadir el video de YouTube -->
-        <a-entity id="youtube-video"
-                  geometry="primitive: plane; width: 16; height: 9"
-                  material="shader: flat; src: #videoTexture"
-                  position="0 2 -5"></a-entity>
+<body>
+
+    <a-scene vr-mode-ui="enabled: true">
+
+        <a-assets>
+            <img src="Texturas/meteor.jpeg" id="meteor">
+            <img src="Texturas/sky.jpeg" id="sky">
+            <img src="Texturas/entrada salinas.jpg" id="salinas">
+            <video id="pruebaVideo" autoplay loop="true" src="Texturas/moto.mp4"></video>
+        </a-assets>
+
+        <!-- Configuración de la vista estereoscópica -->
+        <a-entity position="0 1.6 0">
+            <a-entity camera="eye:left" look-controls wasd-controls></a-entity>
+            <a-entity camera="eye:right" look-controls wasd-controls></a-entity>
+        </a-entity>
+
+        <!-- Fondo para cada ojo -->
+        <!--<a-sky src="#salinas" stereo="eye:left"></a-sky>
+        <a-sky src="#salinas" stereo="eye:right"></a-sky>-->
+
+        <!-- Opcional: Si deseas mostrar un video -->
+        <a-video src="#pruebaVideo" width="16" height="9" position="0 2 -5"></a-video>
+
+        <!-- Añadir cursor -->
+        <a-entity cursor="rayOrigin: mouse"></a-entity>
     </a-scene>
 
-    <script>
-        // Cargar la API de YouTube IFrame
-        var tag = document.createElement('script');
-        tag.src = "https://www.youtube.com/iframe_api";
-        var firstScriptTag = document.getElementsByTagName('script')[0];
-        firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
-
-        // Función para crear el reproductor de YouTube
-        var player;
-        function onYouTubeIframeAPIReady() {
-            player = new YT.Player('youtube-video', {
-                height: '390',
-                width: '640',
-                videoId: 'https://youtu.be/H9r8CTsSf4U?si=u-0CktK6mqMDpDQm', // Reemplazar con el ID del video de YouTube
-                playerVars: {
-                    'controls': 0,
-                    'showinfo': 0,
-                    'rel': 0
-                }
-            });
-        }
-    </script>
 </body>
+
 </html>
