--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PruebaVR</title>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <script src="js/app.js"></script>
 </head>
 
 <body>
@@ -23,16 +22,11 @@
 
         <!-- Configuración de la vista estereoscópica -->
         <a-entity position="0 1.6 0">
-            <a-entity camera="eye:left" look-controls wasd-controls></a-entity>
-            <a-entity camera="eye:right" look-controls wasd-controls></a-entity>
+            <a-entity camera="look-controls" universal-controls></a-entity>
         </a-entity>
 
-        <!-- Fondo para cada ojo -->
-        <!--<a-sky src="#salinas" stereo="eye:left"></a-sky>
-        <a-sky src="#salinas" stereo="eye:right"></a-sky>-->
-
-        <!-- Opcional: Si deseas mostrar un video -->
-        <a-video src="#pruebaVideo" width="16" height="9" position="0 2 -5"></a-video>
+        <!-- Esfera que contiene el video -->
+        <a-sphere radius="100" material="shader: flat; side: back; src: #pruebaVideo"></a-sphere>
 
         <!-- Añadir cursor -->
         <a-entity cursor="rayOrigin: mouse"></a-entity>
