--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <!-- Añadir cursor -->
         <a-entity cursor="rayOrigin: mouse"></a-entity>
     </a-scene>
-
+    <!--cambio-->
 </body>
 
 </html>
