--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <!-- Esfera que contiene el video -->
         <a-sphere radius="100">
-            <a-video src="#video2" autoplay loop></a-video>
+            <a-sky src="#salinas" autoplay loop></a-sky>
         </a-sphere>
 
         <!-- Añadir cursor -->
