--- a/index.html
+++ b/index.html
@@ -20,15 +20,16 @@
             <video id="video2" autoplay loop="true" src="Texturas/moto2.webm"></video>
         </a-assets>
 
-        <!-- Configuración de la vista estereoscópica -->
+        <a-sky src="#salinas"></a-sky>
+        <!-- Configuración de la vista estereoscópica
         <a-entity position="0 1.6 0">
             <a-entity camera="look-controls" universal-controls></a-entity>
-        </a-entity>
+        </a-entity>-->
 
-        <!-- Esfera que contiene el video -->
+        <!-- Esfera que contiene el video 
         <a-sphere radius="100">
             <a-sky src="#salinas" autoplay loop></a-sky>
-        </a-sphere>
+        </a-sphere>-->
 
         <!-- Añadir cursor -->
         <a-entity cursor="rayOrigin: mouse"></a-entity>
