Imagen Semana Santa
Imagen en semana santa (sin video)

--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
         <a-assets>
             <img src="Texturas/sky.jpeg" id="sky">
             <img src="Texturas/entrada salinas.jpg" id="salinas">
-            <video id="pruebaVideo" autoplay loop="true" src="Texturas/moto.mp4"></video>
-            <video id="video2" autoplay loop="true" src="Texturas/moto2.webm"></video>
+            <img src="Texturas/SemanaSanta.png" id="procesion">
+            <!--<video id="pruebaVideo" autoplay loop="true" src="Texturas/moto.mp4"></video>
+            <video id="video2" autoplay loop="true" src="Texturas/moto2.webm"></video>-->
         </a-assets>
 
-        <a-sky src="#salinas"></a-sky>
+        <a-sky src="#procesion"></a-sky>
         <!-- Configuración de la vista estereoscópica
         <a-entity position="0 1.6 0">
             <a-entity camera="look-controls" universal-controls></a-entity>
