--- a/index.html
+++ b/index.html
@@ -17,17 +17,13 @@
             <img src="Texturas/sky.jpeg" id="sky">
             <img src="Texturas/entrada salinas.jpg" id="salinas">
             <img src="Texturas/SemanaSanta.png" id="procesion">
+            
             <!--<video id="pruebaVideo" autoplay loop="true" src="Texturas/moto.mp4"></video>
             <video id="video2" autoplay loop="true" src="Texturas/moto2.webm"></video>-->
-            <!-- Agrega el sonido que quieres reproducir -->
-            <audio id="audio" src="Texturas/audio.mp3" autoplay loop></audio>
         </a-assets>
 
+        <!--entorno 360 (imagen)-->
         <a-sky src="#procesion"></a-sky>
-
-        <!-- Añade el sonido en la escena -->
-        <a-sound src="#audio" autoplay loop position="0 0 0"></a-sound>
-
         <!-- Configuración de la vista estereoscópica
         <a-entity position="0 1.6 0">
             <a-entity camera="look-controls" universal-controls></a-entity>
